--- a/src/Components/InteractionWindow/InteractionWindow.module.css
+++ b/src/Components/InteractionWindow/InteractionWindow.module.css
@@ -3,9 +3,18 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    height: 70%;
-    width: 70%;
+    transform: translate(-100%, -50%);
+    height: 100%;
+    width: 40%;
     color: #fefcfd;
-    border-radius: 25px;
+    font-weight: bold;
+    font-size: 125%;
+}
+
+.Center {
+    margin: 0;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
