--- a/src/Components/AnswerOption/AnswerOption.module.css
+++ b/src/Components/AnswerOption/AnswerOption.module.css
@@ -1,5 +1,25 @@
 .li {
     list-style-type: none;
-    font-size: 150%;
+}
+
+.Button{
+    background-color: #4ecdc4;
+    width: 100%;
+    height: 75px;
+    font-size: 125%;
+    color: #fefcfd;
     text-align: center;
+    text-decoration: none;
+    border: solid 1px transparent;
+}
+
+.Button:active {
+    transform: translate(1px);
+    filter: saturate(150%);
+    border: 1px solid white;
+}
+
+.Button:hover,
+.Button:focus {
+    background-color: #2da199;
 }
