--- a/src/Components/AnswerOption/AnswerOption.module.css
+++ b/src/Components/AnswerOption/AnswerOption.module.css
@@ -7,10 +7,11 @@
     width: 100%;
     height: 75px;
     font-size: 125%;
-    color: #fefcfd;
+    color: #373f51;
     text-align: center;
     text-decoration: none;
-    border: solid 1px transparent;
+    border-top: solid 1px white;
+    font-weight: bold;
 }
 
 .Button:active {
@@ -22,4 +23,5 @@
 .Button:hover,
 .Button:focus {
     background-color: #2da199;
+    font-size: 150%;
 }
