--- a/src/Components/ImageWindow/ImageWindow.module.css
+++ b/src/Components/ImageWindow/ImageWindow.module.css
@@ -1,9 +1,11 @@
 .ImageWindow {
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(10%, -50%);
-    height: 80%;
-    width: 40%;
-    border-radius: 5px;
+    transform: translate(0%, 20%);
+    height: 100%;
+    width: 100%;
+    background-color: green;
+}
+
+.Container {
+    max-width: 85% !important;
 }
