--- a/src/Components/InteractionWindow/InteractionWindow.module.css
+++ b/src/Components/InteractionWindow/InteractionWindow.module.css
@@ -1,12 +1,8 @@
 .InteractionWindow {
-    background-color: #373f51;
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-100%, -50%);
-    height: 100%;
-    width: 40%;
-    border-radius: 5px;
+    background-color: red;
+    height: 20%;
+    width: 100%;
 }
 
 .Center {
