--- a/src/Components/Picture/Picture.module.css
+++ b/src/Components/Picture/Picture.module.css
@@ -1,18 +1,12 @@
 .Polaroid img{
     background: white;
-    display: block;
-    margin: 0 auto 30px;
+    margin: 30px auto 30px;
     padding: 10px 10px 25px;
-    text-align: center;
-    text-decoration: none;
     -webkit-box-shadow: 0 4px 6px rgba(0,0,0,.3);
     -moz-box-shadow: 0 4px 6px rgba(0,0,0,.3);
     box-shadow: 0 4px 6px rgba(0,0,0,.3);
     -webkit-transition: all .15s linear;
     -moz-transition: all .15s linear;
     transition: all .15s linear;
-    z-index: 0;
-    position: relative;
-    width: inherit;
 }
 
