Added rotation to polaroids

--- a/src/Components/InteractionWindow/InteractionWindow.module.css
+++ b/src/Components/InteractionWindow/InteractionWindow.module.css
@@ -1,8 +1,8 @@
 .InteractionWindow {
     position: fixed;
-    background-color: red;
     height: 20%;
     width: 100%;
+    text-align: center;
 }
 
 .Center {
