--- a/src/Components/Picture/Picture.module.css
+++ b/src/Components/Picture/Picture.module.css
@@ -1,6 +1,6 @@
 .Polaroid img{
     background: white;
-    margin: 30px auto 30px;
+    margin: 50px auto;
     padding: 10px 10px 25px;
     -webkit-box-shadow: 0 4px 6px rgba(0,0,0,.3);
     -moz-box-shadow: 0 4px 6px rgba(0,0,0,.3);
@@ -10,3 +10,14 @@
     transition: all .15s linear;
 }
 
+.Row div:nth-child(even){
+    -webkit-transform: rotate(4deg);
+    -moz-transform: rotate(4deg);
+    transform: rotate(4deg);
+}
+
+.Row div:nth-child(odd){
+    -webkit-transform: rotate(-1deg);
+    -moz-transform: rotate(-1deg);
+    transform: rotate(-1deg);
+}
